--- a/src/index.css
+++ b/src/index.css
@@ -8,21 +8,43 @@
   text-align: center;
   align-items: center;
   align-content: center;
-  margin: auto;
+  justify-content: center;
+
 
 }
 div:target{
   display: block;
-  margin: auto;
   margin-top: 20%;
-  display: block;
-  margin: 0;
 }
 .fetch{
   display: none;
 }
 .searchs{
-  display: none;
+  display:none;
+}
+.review{
+  margin-top: 500px;
+}
+.container4{
+  font-size: large;
+  background-color: rgba(177, 175, 175, 0.475);
+  color: azure;
+  width: 90%;
+  position: block;
+  align-content: center;
+  text-align: center;
+  height: fit-content;
+  border-radius: 10px;
+  padding: 10px;
+
+}
+#green{
+  font-size: large;
+  background-color: rgb(61, 141, 145);
+  color: azure;
+  left: 50%;
+  position: absolute;
+  padding: 100px;
 }
 input{
   height: 50px;
@@ -44,7 +66,7 @@ input:focus{
   width: 100%;
   margin: auto;
   position: sticky;
-  top: 70px;
+  top: 100px;
   font-size: large;
   color: azure;
 }
@@ -55,7 +77,7 @@ input:focus{
   font-size:15px;
 };
 a{
- display: none;;
+ display: none;
 };
 }
 @media (min-width:700px) {
@@ -81,8 +103,7 @@ body{
   margin: auto;
   border:none;
   border-radius: 10px;
-  height: 500px;
-  margin: 10%;
+  height: fit-content;
   text-align: center;
   align-content: center;
   font-size: small;
@@ -96,9 +117,8 @@ margin-top:1px;
   display: flex;
   flex-wrap:wrap;
   flex-direction: row;
-  width: 80%;
   border:none;
-  margin-top: 10%;
+  margin-top: 100px;
   
 }
 .container:not(h4){
@@ -130,7 +150,6 @@ ul{
 }
 a{
   text-decoration: none;
-  padding: 10px;
   border:none;
   padding: 10px;
   background-color:rgb(76, 27, 122);
