added channel name

--- a/src/index.css
+++ b/src/index.css
@@ -17,20 +17,7 @@
 
 }
 
-.container4{
-  font-size: large;
-  background-color:  rgb(154, 126, 181);
-  color: azure;
-  width: 90%;
-  position: block;
-  align-content: center;
-  text-align: center;
-  height: 400px;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 5%;
 
-}
 #green{
   font-size: large;
   background-color: rgb(61, 141, 145);
@@ -84,7 +71,6 @@ body{
 }
 .container2{
   background-color: rgb(154, 126, 181);
-  margin: 10px;
   border:none;
   border-radius: 10px;
   height: fit-content;
@@ -94,11 +80,27 @@ body{
   align-items: center;
   font-size: small;
   color: aliceblue;
-  padding: 20px;
-  width: 200px;
-  margin-top:1px;
+  min-width: 250px;
+  max-width: 95%;
+  position:relative;
+  padding: 10px;
+  margin: 2%;
   
   
+}
+.container4{
+  font-size: large;
+  background-color:  rgb(154, 126, 181);
+  color: azure;
+  align-content: center;
+  text-align: center;
+  height: 400px;
+  border-radius: 10px;
+  width: 250px;
+  padding: 10px;
+  position: relative;
+  margin: 5px;
+  left: 20px;
 }
 .container3{
   display: flex;
