--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 .hide{
   display: none;
 }
@@ -50,6 +51,7 @@ input:focus{
   font-size: large;
   color: azure;
   padding-bottom: 20px;
+  z-index: 2;
 }
 .search{
   padding-left: 20px;
@@ -69,6 +71,23 @@ body{
   align-items: center;
   margin-top:300px;
 }
+
+.container4{
+  font-size: large;
+  background-color:  rgb(154, 126, 181);
+  color: azure;
+  align-content: center;
+  text-align: center;
+  height: 400px;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px;
+  left:0;
+  display: block;
+  min-width: 250px;
+   
+
+}
 .container2{
   background-color: rgb(154, 126, 181);
   border:none;
@@ -80,33 +99,17 @@ body{
   align-items: center;
   font-size: small;
   color: aliceblue;
-  min-width: 250px;
-  max-width: 95%;
   position:relative;
-  padding: 10px;
-  margin: 2%;
-  
-  
+  padding: 2px;
+  margin: 2%; 
+  height: 150px; 
 }
-.container4{
-  font-size: large;
-  background-color:  rgb(154, 126, 181);
-  color: azure;
-  align-content: center;
-  text-align: center;
-  height: 400px;
-  border-radius: 10px;
-  width: 250px;
-  padding: 10px;
-  position: relative;
-  margin: 5px;
-  left: 20px;
-}
+
 .container3{
-  display: flex;
-  flex-wrap:wrap;
-  flex-direction: row;
-  border:none;
+  display: grid;
+  grid-template-columns:auto auto auto;
+  justify-content: space-around;
+  padding: 3px;
   margin-top: 100px;
   
 }
@@ -119,6 +122,7 @@ body{
   width:clamp(300px, 1520px,100%) ;
   top: 0;
   padding-bottom: 10px;
+  z-index: 2;
   
 }
 h4{
@@ -148,4 +152,9 @@ a{
   margin: 2px;
   box-shadow: 12px 12px 10spx rgba(0, 0, 0, 0.1);
   font-size: 0.8rem;
+}
+@media screen and (min-width:500px) {
+  .container3{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
