added channel name

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ body{
   
 }
 .container:not(h4){
-  background-color: rgba(111, 3, 212, 0.983);
+  background-image:linear-gradient(to right, rgb(92, 0, 128), rgba(255, 255, 255, 0.821));
   color:white;
   display: flex;
   justify-content: flex-end;
@@ -156,5 +156,8 @@ a{
 @media screen and (min-width:500px) {
   .container3{
     grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .container:not(h4){
+    background-image: linear-gradient(to right, rgb(92, 0, 128), rgba(238, 235, 235, 0.854));
   }
 }
